--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "phpoffice/phpspreadsheet": "1.28"
+        "phpoffice/phpspreadsheet": "^2.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
